--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body.dark #loader div {
 }
 
 .about {
-  margin: Min(8.5%, 7.5rem);
+  margin: Min(15%, 7.5rem);
 }
 
 .about h1 {
@@ -139,8 +139,8 @@ body.dark #loader div {
 }
 
 .about .domains .domain {
-  -ms-flex-preferred-size: Max(15rem, 25%);
-      flex-basis: Max(15rem, 25%);
+  -ms-flex-preferred-size: 16.5rem;
+      flex-basis: 16.5rem;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 3fr;
